Fix title overlapping Google+ button

--- a/res/style.scss
+++ b/res/style.scss
@@ -112,7 +112,7 @@
 
         & .title {
             font-size: 130%;
-            padding-right: 20px;
+            padding-right: 110px;
         }
 
         .at_author[data-username="[deleted]"] {
